styles.css
@import url('https://fonts.googleapis.com/css2?family=Martian+Mono:wght@100..800&family=Oswald:wght@200..700&family=Tilt+Neon&family=Yarndings+20&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Martian+Mono:wght@100..800&family=Oswald:wght@200..700&family=Tilt+Neon&family=Yarndings+20&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Lilita+One&family=Martian+Mono:wght@100..800&family=Oswald:wght@200..700&family=Tilt+Neon&family=Yarndings+20&display=swap');

:root {
    --form-control-color: rgb(9, 8, 94);
    --border-color: rgb(243, 231, 231);
    --margin-pseudo-t: 6px;
    --margin-pseudo-l: 13px;
  }
  

* {
   box-sizing: border-box;
}

body {
    background: url(https://images.unsplash.com/photo-1684833685209-0f23802f7d40?q=80&w=1372&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D) no-repeat center fixed;
    background-size: cover;
    background-color: red;
    color: rgb(165, 157, 147);
    margin: 0;
}

.main-content {
    display: grid;
    grid-template-columns: 100vw;
    grid-template-rows: 120px 1330px;
    justify-content: center;
}

#title, #description {
    text-align: center;
}

.section-input {
background-color: rgba(3, 37, 48, 0.8);
border-radius: 5px;
}

.section-title {
    background-color: rgba(18, 77, 97, 0.4);
    border-radius: 4px;
    color: bisque;
}

#survey-form {
    display: grid;
    grid-template-columns: 100vw;
    grid-template-rows: 295px 110px 135px 110px 440px 180px 42px;
    color: bisque;
}

#name,#number,#email {
    display: block;
    padding: 10px;
    width: 100%;
    margin-top: 10px;
    border-radius: 4px;
}

label,legend {
    font-weight: bolder;
}

fieldset {
    border-radius: 4px;
    margin-bottom: 10px;
}

#dropdown, #feature {
    display: block;
    padding: 10px;
    width: 100%;
    font-size: 18px;
    margin-top: 10px;
    font-family: "Lucida Console", "Courier New", monospace;
    text-align: center;
}

#radiotitle {
    display: block;
}

legend {
    margin-top: 10px;
}

#comment {
    margin: 12px 0;
    width: 100%;
    border-radius: 2px;
    font-size: large;
    font-family: "Martian Mono", monospace;
    font-optical-sizing: auto;
    font-weight:bold;
    font-style: normal;
}

#submit {
    text-align: center;
    width: 100%;
    font-weight: bolder;
    font-size: 18px;
    color: bisque;
    background-color: rgb(17, 36, 29);
    font-family: "Martian Mono", monospace;
    border-radius: 3px;
}

#submit:hover {
    background-color: cadetblue;
    cursor: pointer;
    outline: none;
    border-radius: 4px;
}

input {
    font-size: large;
}

.section-title {
    font-weight: bolder;
}

#title {
    font-family: "Lilita One", sans-serif;
    font-weight: 400;
    font-style: normal;
}

#description {
  font-family: "Caveat", cursive;
  font-optical-sizing: auto;
  font-weight: bold;
  font-style: normal;
}

fieldset:last-of-type {
    border: none;
}
 
.recommendation {
   display: inline-block;
   cursor: pointer;
}

input[type="radio"] {
    /* Add if not using autoprefixer */
    -webkit-appearance: none;
    /* Remove most all native input styles */
    appearance: none;
    /* For iOS < 15 */
    background-color: var(--form-background);
    /* Not removed via appearance */
    margin-top: var(--margin-pseudo-t);
    margin-left: var(--margin-pseudo-l);
    font: inherit;
    color: black;
    width: 1.15em;
    height: 1.15em;
    border: 0.15em solid var(--border-color);
    border-radius: 50%;
    cursor: pointer;
  }
  
  input[type="radio"]:checked {
    /* transform: scale(1); */
    background-image: linear-gradient(56deg, rgb(231, 121, 102), rgb(78, 3, 3));
    outline-offset: max(0.5px, 0);
    outline: max(0.5px, 0.15em) solid var(--border-color);
  }

  input[type="checkbox"] {
    /* Add if not using autoprefixer */
    -webkit-appearance: none;
    /* Remove most all native input styles */
    appearance: none;
    /* For iOS < 15 */
    background-color: var(--form-background);
    /* Not removed via appearance */
    margin-top: var(--margin-pseudo-t);
    margin-left: var(--margin-pseudo-l);
    font: inherit;
    color: var(--border-color);
    width: 1.15em;
    height: 1.15em;
    border: 0.15em solid var(--border-color);
    transform: translateY(0.23em);
    cursor: pointer;
  }
  
  input[type="checkbox"]:checked {
    /* transform: scale(1); */
    background-image: linear-gradient(56deg, rgb(231, 121, 102), rgb(78, 3, 3));
  }

@media only screen and (min-width: 768px) {
    .main-content,#survey-form {
        grid-template-columns: 60vw;
    }

    body {
        background-size: cover;
        background-position: center;
        background-clip: content-box;
    }
     
} 

@media only screen and (max-width: 460px) { 

    .main-content, #survey-form {
        grid-template-columns: 100vw;
    }

    #survey-form {
     display: grid;
     grid-template-rows: 295px 125px 155px 130px  440px 180px 42px;
     color: bisque;
      }

   .main-content{
     grid-template-rows: 120px 1380px;
    }
 
} 

